refactor: generate api ready for formation
